--- a/ios-developer.html
+++ b/ios-developer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
+<h5><a href='https://jobs.impactbusinessgroup.com/jb/iOS-Developer-Jobs-in-Michigan-Grand-Rapids-Muskegon-/4825692'>iOS Developer Job in Grand Rapids Michigan, Grand Rapids-Muskegon- | IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://holycodedoo.applytojob.com/apply/kN74wiiMCD/IOS-Developer-Oviva-Team'>iOS Developer - Oviva Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -183,7 +183,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
+<h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
     iOS Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -205,7 +205,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/JobDetail/iOS-Developer/141'>iOS Developer - Careers Portal</a></h5> 
+<h5><a href='https://verisure.avature.net/careers/JobDetail/iOS-Developer/141'>iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -229,7 +229,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
+<h5><a href='https://bdswiss.workable.com/j/7D4A039875'>BDSwiss - Jobs: iOS Mobile Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -241,7 +241,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=ncMG9Mw4'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -249,7 +249,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.sap.com/job/Walldorf-Mobile-iOS-Developer-Senior-Expert-%28fmd%29-SAP-Mobile-Center-of-Excellence-BW/559800101/'>Mobile iOS Developer Senior / Expert (f/m/d) - SAP Mobile Center of Excellence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.sap.com/job/Walldorf-Mobile-iOS-Developer-Senior-Expert-%28fmd%29-SAP-Mobile-Center-of-Excellence-BW/559800101/'>Mobile iOS Developer Senior / Expert (f/m/d) - SAP Mobile Center of Excellence</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -257,7 +257,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -285,7 +285,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DiverseLynxLLC1/743999697086183-ios-developer'>Diverse Lynx LLC IOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DiverseLynxLLC1/743999697086183-ios-developer'>Diverse Lynx LLC IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -297,7 +297,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
+<h5><a href='https://touchbistro.applytojob.com/apply/wWY2O06LBA/Intermediate-IOS-Developer'>Intermediate iOS Developer - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Apply to Intermediate iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
