--- a/security.html
+++ b/security.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/915082e2-55a4-4719-9c5c-735da8fc4d15'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<h5><a href='https://jobs.lever.co/prominentedge/915082e2-55a4-4719-9c5c-735da8fc4d15'>Prominent Edge LLC - Lead Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/obsidiansecurity/4b8fc2f7-9468-4bfe-904a-d6088446f79e'>Obsidian Security, Inc. - Senior Customer Success Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/obsidiansecurity/4b8fc2f7-9468-4bfe-904a-d6088446f79e'>Obsidian Security, Inc. - Senior Customer Success Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,6 +111,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
+<h5><a href='https://apply.workable.com/wavestrong/j/6F90121359/'>Sr. Security Engineer (Symantec / Blue Coat ProxySG) - WaveStrong</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
+months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
+<hr/>
 <h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
@@ -124,7 +129,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -136,7 +141,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -164,7 +169,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -284,7 +289,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
       Systems Security Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
@@ -447,10 +452,6 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698074222-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://tiaa.referrals.selectminds.com/jobs/senior-cybersecurity-analyst-identity-access-management-2910'>Senior Cybersecurity Analyst, Identity Access Management - TIAA Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
