--- a/software.html
+++ b/software.html
@@ -39,10 +39,38 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oWnUafw7&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nNa8nMwJ'>Schneider Electric NAM Careers - Software Engineering Manager - Embedded Firmware</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://hayessoft.applytojob.com/apply/G6iQKwBzbe/Software-Engineer'>Software Engineer - Hayes Software Systems - Career Page</a></h5> 
+<p><span class="badge badge-light">Austin</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-identity-experience-1886374/?gh_src=d392d1b71'>Software Engineer, Identity Experience | Okta</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698437841-staff-software-engineer'>Visa Staff Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Singapore</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440151-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440120-fresher-java-software-engineer'>KMS Technology FRESHER JAVA SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Vietnam</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://walletservices.recruitee.com/o/senior-software-engineer-net-c'>
       Senior Software Engineer -  .Net C# - Wallet.Services
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/hobsons/job/o1Wsbfwk'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
@@ -53,7 +81,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flashrecruit.com/jobs/8115287'>Web Software Engineer in Chicago (Remote), Illinois - Chat Now Live with a Recruiter (Job #8115287) | FlashRecruit</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago Chicago</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -159,7 +187,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/443b14dedf5c-software-engineer-application-reliability'>Software Engineer - Application Reliability at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/443b14dedf5c-software-engineer-application-reliability'>Software Engineer - Application Reliability at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -233,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/newrelic/job/ocZ6afwb'>New Relic Careers - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -277,7 +305,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -297,7 +325,7 @@
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183200-software-developer-intermediate'>Imaginary Spaces Software Developer - Intermediate | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183200-software-developer-intermediate'>Imaginary Spaces Software Developer - Intermediate | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -373,7 +401,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409357-sr-software-engineer-web-developer'>Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698409357-sr-software-engineer-web-developer'>Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -397,9 +425,14 @@
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oDArbfwz&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=niRlnMw8'>NICE Careers - Senior Java Software Engineer</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://apply.workable.com/arcadia-power/j/6BEAD3CCF1/'>Software Engineer - Arcadia Power</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Oct 18, 2019 ... We are seeking a resourceful, versatile Software Engineer to join the Platform 
+Engineering team and work on various projects across our core platform and?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396869-fresher-java-software-engineer'>KMS Technology FRESHER JAVA SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Vietnam</span></p>
@@ -412,50 +445,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698396618-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/globalsign/jobs/senior-software-engineer-bgidOM-L0r6BGMaKjNoogA'>Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom London, United Kingdom</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/499584536A'>iOS Software Engineer - Campinas - QuintoAndar</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 17, 2019 ... iOS Software Engineer responsibilities at QuintoAndar. Develop and maintain 
-QuintoAndar end-user applications for iOS; Write clean code and use code linting
-?...</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/94A1E34B4B'>Senior Software Engineer- Front End - Bevi</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 18, 2019 ... As a Senior Software Engineer- Front End, your guidance and input drive 
-architecture and functionality decisions. Whether you prefer providing mentorship 
-to?...</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/BA0562F41F'>Senior Software Engineer - Bevi</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 18, 2019 ... Bevi is an environmental company that aims to entirely eliminate disposable 
-bottles and cans through smart beverage machines that purify water and create?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/quadpay/j/E460655066/'>Software Engineer - QuadPay</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 22, 2019 ... About QuadPay:QuadPay is one of the fastest growing fintech start-ups, that 
-allow shoppers to buy anywhere, at anytime - and pay in 4 interest-free, 
-automatic?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/ratesetter/j/9761067716/'>Junior Software Engineer (Full Stack) - RateSetter</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 16, 2019 ... We are currently recruiting at all levels from engineer to Technical Leads. Our 
-engineers love building things, solving complex challenges, learning new?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/forthemakers/j/9EF5E3CB9B/'>Senior Software Engineer - For The Makers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... About For The MakersFor The Makers is building the digital infrastructure to 
-improve and invent tools for makers: and we're starting with the uber-knitters of 
-the?...</p>
-<hr/>
-<h5><a href='https://apply.workable.com/tradegecko/j/2B99A67AA1/'>Software Engineer - Payments - TradeGecko Pte. Ltd.</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Our dynamic, passionate & resilient team is looking for an equally talented 
-Engineer to be part of a close-knit team to build and support a software that is 
-vital to?...</p>
 <hr/>
 
 
